client/src/stylesheets/App.css
/* @import url("https://fonts.googleapis.com/css2?family=Damion&family=Montserrat:wght@400;600;700;800&display=swap"); */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
}

/*FOR FOOTER FORMATTING */
html,
body {
  height: 100%;
  margin: 0;
}

/*FOR FOOTER FORMATTING */
.content-wrap {
  min-height: 100vh;
  margin-bottom: -50px;
}

/* .projects-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
} */

.projects-container {
  margin: 20px 30px;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-auto-rows: auto;
  list-style: none;
}

.project-profile {
  border: 0px solid black;
  border-radius: 4px;
  padding: 10px;
  margin: 10px;
  display: grid;
  grid-template-columns: 30% 60%;
  overflow-wrap: normal;
  box-shadow: 0px 0px 12px -5px;
}

.project-name {
  font-size: 20px;
  margin-bottom: 10px;
  color: #07689f;
  overflow-wrap: normal;
}

.client-name {
  margin-bottom: 12px;
  color: #ff7e67;
}

.project-element {
  flex-wrap: wrap;
  max-width: 40%;
}

.project-description {
  display: flex;
  flex-direction: column;
  flex: auto;
}

.tagline {
  text-align: center;
  margin-top: 60px;
  font-size: 40px;
}

.tagline-span-1 {
  color: #07689f;
  font-weight: bold;
}

.tagline-span-2 {
  color: #07689f;
  font-weight: bold;
}

.projects-header {
  text-align: center;
  color: #ff7e67;
  margin-top: 30px;
  margin-bottom: 30px;
  font-size: 40px;
}

